<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:card_view="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/colorBackground"
              android:orientation="vertical"
              tools:context=".activities.Dashboard_Activity">

    <!--  <RelativeLayout
          android:id="@+id/top_layout"
          android:layout_width="match_parent"
          android:layout_height="@dimen/dim_40"
          android:background="@color/colorPrimary">

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/government_exam_preparation"
              android:textColor="@color/colorWhite"
              android:textSize="@dimen/dim_16"
              android:layout_centerInParent="true"
              />

          </RelativeLayout>-->

    <include layout="@layout/toolbar_layout"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dim_15"
            android:layout_marginRight="@dimen/dim_15"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear_layout_one"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_150"

                android:layout_marginTop="@dimen/dim_15"
                android:orientation="horizontal"
                android:weightSum="2"
                >


                <android.support.v7.widget.CardView
                    android:id="@+id/about_us_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/dim_7"
                    android:layout_weight="1"
                    card_view:cardCornerRadius="@dimen/dim_3"
                    card_view:cardElevation="@dimen/dim_2"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/dim_60"
                            android:layout_height="@dimen/dim_60"
                            android:layout_gravity="center_horizontal"
                            android:background="@drawable/about_us_img"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/dim_10"
                            android:gravity="center_horizontal"
                            android:text="@string/about_us"
                            android:textColor="@color/colorDashboardText"
                            android:textSize="@dimen/dim_14"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/jobs_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dim_7"
                    android:layout_weight="1"
                    card_view:cardCornerRadius="@dimen/dim_3"
                    card_view:cardElevation="@dimen/dim_2"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/dim_60"
                            android:layout_height="@dimen/dim_60"
                            android:layout_gravity="center_horizontal"
                            android:background="@drawable/jobs_img"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/dim_10"
                            android:gravity="center_horizontal"

                            android:text="@string/jobs"
                            android:textColor="@color/colorDashboardText"
                            android:textSize="@dimen/dim_14"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_two"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_150"

                android:layout_marginTop="@dimen/dim_15"

                android:orientation="horizontal"
                android:weightSum="2"
                >


                <android.support.v7.widget.CardView
                    android:id="@+id/coaching_center_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/dim_7"
                    android:layout_weight="1"
                    card_view:cardCornerRadius="@dimen/dim_3"
                    card_view:cardElevation="@dimen/dim_2"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/dim_60"
                            android:layout_height="@dimen/dim_60"
                            android:layout_gravity="center_horizontal"
                            android:background="@drawable/coaching_center_img"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/dim_10"
                            android:gravity="center_horizontal"
                            android:text="@string/coaching_center"
                            android:textColor="@color/colorDashboardText"
                            android:textSize="@dimen/dim_14"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/exam_preparation_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dim_7"
                    android:layout_weight="1"
                    card_view:cardCornerRadius="@dimen/dim_3"
                    card_view:cardElevation="@dimen/dim_2"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/dim_60"
                            android:layout_height="@dimen/dim_60"
                            android:layout_gravity="center_horizontal"
                            android:background="@drawable/exam_preparation_img"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/dim_10"
                            android:gravity="center_horizontal"

                            android:text="@string/exam_preparation"
                            android:textColor="@color/colorDashboardText"
                            android:textSize="@dimen/dim_14"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_layout_three"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_150"

                android:layout_marginTop="@dimen/dim_15"
                android:orientation="horizontal"
                android:weightSum="2"
                >


                <android.support.v7.widget.CardView
                    android:id="@+id/favourite_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/dim_7"
                    android:layout_weight="1"
                    card_view:cardCornerRadius="@dimen/dim_3"
                    card_view:cardElevation="@dimen/dim_2"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/dim_60"
                            android:layout_height="@dimen/dim_60"
                            android:layout_gravity="center_horizontal"
                            android:background="@drawable/favourite_img"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/dim_10"
                            android:gravity="center_horizontal"
                            android:text="@string/favourite"
                            android:textColor="@color/colorDashboardText"
                            android:textSize="@dimen/dim_14"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

                <android.support.v7.widget.CardView
                    android:id="@+id/share_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dim_7"
                    android:layout_weight="1"
                    card_view:cardCornerRadius="@dimen/dim_3"
                    card_view:cardElevation="@dimen/dim_2"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/dim_60"
                            android:layout_height="@dimen/dim_60"
                            android:layout_gravity="center_horizontal"
                            android:background="@drawable/share"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/dim_10"
                            android:gravity="center_horizontal"

                            android:text="@string/share"
                            android:textColor="@color/colorDashboardText"
                            android:textSize="@dimen/dim_14"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dim_150"

                android:layout_marginBottom="@dimen/dim_10"
                android:layout_marginTop="@dimen/dim_15"
                android:orientation="horizontal"
                android:weightSum="2"
                >


                <android.support.v7.widget.CardView
                    android:id="@+id/follow_us_view"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/dim_7"
                    android:layout_weight="1"
                    card_view:cardCornerRadius="@dimen/dim_3"
                    card_view:cardElevation="@dimen/dim_2"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/dim_100"
                            android:layout_height="@dimen/dim_60"
                            android:layout_gravity="center_horizontal"
                            android:background="@drawable/follow_us"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/dim_10"
                            android:gravity="center_horizontal"
                            android:text="@string/follow_us"
                            android:textColor="@color/colorDashboardText"
                            android:textSize="@dimen/dim_14"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>


                <android.support.v7.widget.CardView
                    android:id="@+id/notification"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dim_7"
                    android:layout_weight="1"
                    card_view:cardCornerRadius="@dimen/dim_3"
                    card_view:cardElevation="@dimen/dim_2"
                    >

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="@dimen/dim_84"
                            android:layout_height="@dimen/dim_75"
                            android:background="@drawable/jobs_img"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/dim_10"
                            android:gravity="center_horizontal"
                            android:text="Notifications"
                            android:textColor="@color/colorDashboardText"
                            android:textSize="@dimen/dim_14"/>

                    </LinearLayout>

                </android.support.v7.widget.CardView>


            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <Button
        android:id="@+id/about_us"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_40"
        android:text="About Us"
        />

    <Button
        android:id="@+id/jobs"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_40"
        android:text="Jobs"
        />
    <Button
        android:id="@+id/coaching_center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_40"
        android:text="Coaching Center"
        />

    <Button
        android:id="@+id/exam_preparation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_40"
        android:text="Exam Preparation"
        />
    <Button
        android:id="@+id/favourite"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_40"
        android:text="Favourite"
        />
    <Button
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_40"
        android:text="Share"
        />
    <Button
        android:id="@+id/fallow_us"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim_40"
        android:text="Fallow Us"
        />

    </LinearLayout>
-->


</LinearLayout>
